# mem

./: .gitignore  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/prisma-cli/: Cargo.toml
src-tauri/entity/src/: capture.rs  lib.rs  mod.rs  prelude.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: m20220101_000001_create_table.rs
src-tauri/prisma/: schema.prisma
src-tauri/src/: main.rs
